--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html {
     margin: 0;
     padding: 0;
-    font-family: Poppins;
+    font-family: 'Jetbrains Mono';
     background-image: url("coolcinematic.png");
     background-size: cover;
 }
